# mpc-power-converters

./: .gitignore  CMakeLists.txt  README.md  app.c  main.c  main.h  matrix.c
core/: app.c  app.h  main.c  main.h  matrix.c  matrix.h
experiments/cpp-reference/: app.cpp
matlab/: kouro_mpc_v2.m
tests/: matrix.c
